# sentiric-knowledge-indexing-service

./: .context.md  .env.example  .gitignore  Dockerfile  LOGIC.md  Makefile  README.md  TASK.MD  docker-compose.infra.yml  docker-compose.override.yml  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: main.py  runner.py
app/core/: chunking.py  config.py  health.py  logging.py  metrics.py  models.py
app/ingesters/: __init__.py  base.py  file_ingester.py  postgres_ingester.py  web_ingester.py
app/workers/: indexing_worker.py
docs/: CLI.md
