### 📄 File: knowledge-indexing-service/pyproject.toml (DÜZELTİLMİŞ)

[tool.poetry]
name = "sentiric-knowledge-indexing-service"
version = "0.1.0"
description = "Retrieval Augmented Generation (RAG) Indexing Service for processing and vectorizing data into Qdrant."
authors = ["Sentiric Team"]
license = "Apache-2.0"
readme = "README.md"

# --- YENİ BÖLÜM BAŞLANGICI ---
[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
# --- YENİ BÖLÜM SONU ---

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.7.3"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
structlog = "^24.2.0"
grpcio = "^1.64.1"
asyncpg = "^0.29.0"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
qdrant-client = "^1.9.0"
sentence-transformers = "^2.7.0"
protobuf = "^6.32.0"
sentiric-contracts-py = { git = "https://github.com/sentiric/sentiric-contracts.git", tag = "v1.9.0" }

# --- YENİ EKLENEN BÖLÜM (DEV GRUBU) ---
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
# --- BÖLÜM SONU ---

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"